Fix: Labels cut off on chartist

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -75,6 +75,10 @@
 }
 
 /* Chart styling */
+.chartist svg {
+  overflow: visible;
+}
+
 .ct-label {
   font-size: 1rem;
   color: rgba(0, 0, 0, 0.8);
